@@ -25,6 +25,8 @@ import org.zowe.apiml.zaas.ZaasTokenResponse;
 
 import java.io.IOException;
 import java.net.HttpCookie;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -45,13 +47,17 @@ public abstract class TokenSchemeTest {
 
 
     private String getCookie(HttpExchange httpExchange, String cookieName) {
-        List<HttpCookie> cookies = Optional.ofNullable(httpExchange.getRequestHeaders().get("Cookie"))
-            .orElse(Collections.emptyList())
-            .stream()
+        List<String> cookieList = httpExchange.getRequestHeaders().get("Cookie");
+        if(cookieList == null || cookieList.isEmpty()) return null;
+        var allCookies = new ArrayList<String>();
+        for(String cookies : cookieList){
+            allCookies.addAll(Arrays.asList(cookies.split(";")));
+        }
+        List<HttpCookie> cookies = allCookies.stream()
             .map(HttpCookie::parse)
             .flatMap(Collection::stream)
             .filter(c -> StringUtils.equalsIgnoreCase(cookieName, c.getName()))
-            .collect(Collectors.toList());
+            .toList();
         assertTrue(cookies.size() <= 1);
         return cookies.isEmpty() ? null : cookies.get(0).getValue();
     }
